# Lensemble

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RFC-0001-architecture.md  RFC-0002-gauge-and-aggregation.md  RFC-0003-federated-protocol.md  RFC-0004-data-provenance.md  RFC-0005-evaluation.md  RFC-0006-verifiable-contribution.md  SPEC.md  docs_hooks.py  docs_slug.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  determinism.yml  docs.yml  pages.yml  release.yml
configs/baselines/: centralized.yaml  fork-a.yaml  local-only.yaml  naive-fedavg.yaml
deploy/: README.md  compose.yaml
deploy/helm/: Chart.yaml
deploy/hfjobs/: README.md  train_federated_lewm.py  train_lewm.py  train_phase3_consortium.py
docs/: ablation-ladder.md  index.md  reference.md
docs/evidence/: dynamic_env_consortium_manifest.json  dynamic_env_dataset_registry.json  dynamic_env_silo_plan.json  lewm_tworooms_action_stats.json  lewm_tworooms_adapter_overfit.json  lewm_tworooms_browser_export_manifest.json  lewm_tworooms_checkpoint_manifest.json  lewm_tworooms_demo_card.md  lewm_tworooms_probe_check.json  lewm_tworooms_probe_seedsweep.json  lewm_tworooms_realdata_check.json  lewm_tworooms_reference_report.json  lewm_tworooms_surprise.json  lewm_tworooms_system_probe.json  phase2_baselines_curves_report.json  phase2_downstream_eval_report.json  phase2_evidence_bundle.json  phase2_model_card.md  phase3_consortium_manifest.example.json  phase3_consortium_manifest.json  phase3_consortium_run_report.json  phase3_dataset_registry.example.json  phase3_downstream_eval_report.json  phase3_eval_report.json  phase3_evidence_bundle.json  phase3_inference_demo_report.json  phase3_long_run_dataset_registry.json  phase3_long_run_manifest.json  phase3_long_run_smoke_report.json  phase3_model_card.md  phase3_mvp_benchmark_report.json  phase3_mvp_model_card.md  phase3_observability_report.json
docs/rfcs/: RFC-0001-architecture.md  RFC-0002-gauge-and-aggregation.md  RFC-0003-federated-protocol.md  RFC-0004-data-provenance.md  RFC-0005-evaluation.md  RFC-0006-verifiable-contribution.md  RFC-0007-wmcp-latent-contract.md  RFC-0008-model-objective-numerics.md  RFC-0009-configuration-reproducibility.md  RFC-0010-artifact-checkpoint-format.md  RFC-0011-secure-aggregation.md  RFC-0012-differential-privacy.md  RFC-0013-coordinator-runtime.md  RFC-0014-provenance-commitments.md  RFC-0015-observability-diagnostics.md  RFC-0016-deployment-vendoring-topology.md  RFC-0017-dynamic-env-ungameable-metrics.md
docs/roadmap/: BROWSER_FEDERATED_DEMO.md  DYNAMIC_ENV.md  HACKATHON_PARIS.md  IMPLEMENTATION.md  PHASE2.md  PHASE3.md  TAPESTRY_LEWM.md  TAPESTRY_LEWM_RUNBOOK.md
docs/spec/: 00-overview.md  01-architecture.md  02-public-api.md  03-data-model.md  04-error-model.md  05-observability.md  06-security.md  07-testing-strategy.md  08-performance-budget.md  09-release-and-versioning.md  10-glossary.md  conventions.md
lensemble/: __init__.py  cli.py  errors.py
lensemble/aggregation/: __init__.py  determinism.py  masking.py  secure_agg.py  tee.py
lensemble/artifacts/: __init__.py  checkpoint.py  hashing.py  phase2_bundle.py  schema.py
lensemble/config/: __init__.py  consortium.py  manifest.py  schema.py  seed.py
lensemble/contracts/: __init__.py  action.py  action_head.py  conformance.py  latent.py
lensemble/data/: __init__.py  dataset.py  episode.py  loaders.py  phase2.py  phase3.py  probe.py  quality.py  residency.py
lensemble/demo/: __init__.py  economy.py  evidence_audit.py  federated.py  mollie.py  server.py  system_probe.py
lensemble/eval/: __init__.py  ablation.py  baselines.py  claim_mvp.py  dynamic_downstream.py  harness.py  inference_demo.py  jepa_metrics.py  lewm_tworooms_probe_pairs.py  metrics.py  mpc.py  phase2.py  phase2_bundle.py  phase2_curves.py  phase2_downstream.py  phase3.py  phase3_downstream.py  report.py  sweeps.py  world.py
lensemble/federation/: __init__.py  ablation.py  agent.py  coordinator.py  dynamic_env_bundle.py  messages.py  network.py  outer.py  outer_optimizer.py  participant.py  phase3_bundle.py  phase3_observability.py  phase3_orchestration.py  phase3_privacy.py  pseudogradient.py  quant.py  round.py  service.py  simulation.py  state.py  sweeps.py  transport.py
lensemble/gauge/: __init__.py  anchor.py  backstop.py  distill.py  drift.py  procrustes.py
lensemble/model/: __init__.py  action_head.py  encoder.py  lewm_checkpoint.py  lewm_export.py  lewm_tworooms.py  numerics.py  objective.py  predictor.py  sigreg.py
lensemble/observability/: __init__.py  logging.py  metrics.py  redaction.py
lensemble/privacy/: __init__.py  accountant.py  dp.py
lensemble/provenance/: __init__.py  commit.py  ledger.py  merkle.py
lensemble/verify/: __init__.py  recompute.py  stark.py
scripts/: build_presentation_export.py  check_docs_links.py  demo.sh  dynamic_env_benchmark.py  dynamic_env_observability_report.py  dynamic_env_onnx_export.py  dynamic_env_silos.py  hackathon_demo_rehearsal.py  lewm_adapter_overfit_check.py  lewm_demo_rehearsal.py  lewm_probe_check.py  lewm_probe_seedsweep.py  lewm_surprise_check.py  lewm_system_probe.py  lewm_tworooms_action_stats.py  lewm_tworooms_export.py  lewm_tworooms_ingest.py  lewm_tworooms_realdata_check.py  phase2_bundle.py  phase2_curves_report.py  phase2_dataset_smoke.py  phase2_eval_checkpoint.py  phase2_matrix.py  phase2_split_lerobot_h5.py  phase3_bundle.py  phase3_consortium_manifest.py  phase3_consortium_silos.py  phase3_consortium_smoke.py  phase3_dataset_registry.py  phase3_downstream_eval_report.py  phase3_eval_report.py  phase3_inference_demo.py  phase3_mvp_benchmark.py  phase3_observability_report.py  presentation.sh  release_gates.py
scripts/surprise/: rehearsal.py  run_clean_round.py
tests/: README.md  conftest.py  test_public_surface.py
tests/core/: test_errors.py
tests/e2e/: .gitkeep  test_toy_pipeline.py
tests/integration/: .gitkeep  test_cli_skeleton.py  test_dp_accountant.py  test_networked_transport.py  test_perf_smoke.py  test_phase3_aggregation_privacy.py  test_phase3_consortium_run.py  (+9 more)
(+201 files in other folders)
