# Packaging for `lensemble` — a pure-Python source-and-wheel package (no compiled extensions).
# Runtime dependency constraints are the canonical set in docs/spec/conventions.md (11); pinned-by-content
# dependencies (V-JEPA 2 weights, LeJEPA/LeWM, stable-worldmodel/stable-pretraining) are vendored/recorded
# per run in the RunManifest (RFC-0016), not PyPI runtime deps. See docs/spec/09-release-and-versioning.md.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lensemble"
description = "Federated, end-to-end JEPA world models — trained across sovereign data, verifiable by construction."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Abdelhamid Bakhta" }]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.4,<3",
    "numpy>=1.26",
    "safetensors>=0.4",
    "pylance>=0.10",  # the Lance columnar format (import name `lance`); the bare `lance` PyPI name is an unrelated typosquat
    "h5py>=3.10",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pydantic>=2,<3",
    "blake3>=0.4",
    "typer",
    "rich",
]

[project.optional-dependencies]
# Swappable DP accountant backend (RFC-0012); abstracted behind privacy.accountant.
dp = ["opacus"]
# Optional observability sink adapters (RFC-0015); the canonical sinks are files.
observability = ["tensorboard", "wandb"]
# Dev / test stack.
dev = [
    "pytest",
    "hypothesis",
    "pytest-benchmark",
    "pytest-cov",
    "coverage[toml]",
    "ruff",
    "pyright",
    "build",
]
# Phase-2 verifiable layer (Stwo / Circle-STARK prover, out-of-tree, RFC-0006). Declared, stubbed.
verify = []
# Documentation site (mkdocs-material) + generated API docs (mkdocstrings) — `mkdocs build` (RFC-0009, #77).
docs = ["mkdocs>=1.6", "mkdocs-material", "mkdocstrings[python]"]

[project.urls]
Homepage = "https://github.com/AbdelStark/Lensemble"
Specification = "https://github.com/AbdelStark/Lensemble/blob/main/SPEC.md"

[project.scripts]
lensemble = "lensemble.cli:main"

[tool.setuptools]
# The code/docs/data license split (09 §7): every asset class ships its own license file, and all three
# are bundled into the sdist/wheel metadata. LICENSE (Apache-2.0) is the code license named in [project].
license-files = ["LICENSE", "LICENSE-docs", "LICENSE-data"]

[tool.setuptools.dynamic]
version = { attr = "lensemble.__version__" }

[tool.setuptools.packages.find]
include = ["lensemble*"]

# --- Quality gates (07-testing-strategy §8). The CI workflow (.github/workflows/ci.yml) runs the
# exact commands below; a contributor reproduces every blocking gate locally with the same config. ---

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["lensemble", "tests"]

[tool.ruff.lint]
# Errors (E), pyflakes incl. undefined/unused (F), and import ordering (I). Opinionated rewrite
# families (UP/B/SIM/C4) are deliberately excluded: UP042 would rewrite the spec-mandated
# `LensembleErrorCode(str, Enum)` to `StrEnum` (changes error-code semantics), and B008 fights
# Typer's `= typer.Option(...)` default-argument API (conventions §11).
select = ["E", "F", "I"]
ignore = ["E501"]  # line length is owned by `ruff format`, not the linter

[tool.ruff.lint.isort]
known-first-party = ["lensemble"]  # stdlib / third-party / lensemble in distinct import groups

[tool.pyright]
include = ["lensemble", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# Local runs resolve torch/pytest from the project venv; CI provisions `.venv` identically so the
# import graph pyright sees is the same in both places (07 §8: no GPU, CPU-only, deterministic).
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
# The fixed hypothesis profile (deadline off, derandomized for replay) is registered in
# tests/conftest.py and loaded there (07 §7); CI exports HYPOTHESIS_PROFILE=lensemble.

[tool.coverage.run]
source = ["lensemble"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",  # bare-ellipsis Protocol/abstract bodies
]
# NOTE: `raise NotImplementedError` is deliberately NOT excluded. Stub failure paths in the
# security-critical modules (e.g. provenance.commit before #29) must be covered by an explicit
# contract test, so the 100% gate stays load-bearing rather than silently satisfied.
